--- a/index.template.html
+++ b/index.template.html
@@ -8,6 +8,7 @@
   </head>
   <script>
     var reportData = '{report-data-to-replace}';
+    var reportType = '{report-type}';
   </script>
   <body>
     <div id="app"></div>
