--- a/index.template.html
+++ b/index.template.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <script>
+    var headerLeftImage = '{report-header-image-left}';
+    var headerRightImage = '{report-header-image-right}';
     var reportType = '{report-type}';
     var reportData = '{report-data-to-replace}';
   </script>
