--- a/index.template.html
+++ b/index.template.html
@@ -4,6 +4,7 @@
     var headerLeftImage = '{report-header-image-left}';
     var headerRightImage = '{report-header-image-right}';
     var reportType = '{report-type}';
+    var reportDimensions = '{report-dimensions}';
     var reportData = '{report-data-to-replace}';
   </script>
   <head>
