--- a/index.template.html
+++ b/index.template.html
@@ -6,6 +6,7 @@
     var reportType = '{report-type}';
     var reportDimensions = '{report-dimensions}';
     var reportData = '{report-data-to-replace}';
+    var forceAutoHeightLayout = '{force-auto-height}';
   </script>
   <head>
     <meta charset="utf-8">
