markdown images support

--- a/index.template.html
+++ b/index.template.html
@@ -10,6 +10,7 @@
     var reportDimensions = '{report-dimensions}';
     var reportData = '{report-data-to-replace}';
     var forceAutoHeightLayout = '{force-auto-height}';
+    var markdownArtifactsServerAddress = '{md-server-address-to-replace}';
   </script>
   <body>
     <div id="app"></div>
