--- a/index.template.html
+++ b/index.template.html
@@ -11,6 +11,7 @@
     var reportData = '{report-data-to-replace}';
     var forceAutoHeightLayout = '{force-auto-height}';
     var markdownArtifactsServerAddress = '{md-server-address-to-replace}';
+    var maxTableTextLength = '{max-table-text-length}';
   </script>
   <body>
     <div id="app"></div>
