add server config support to force using server formatted time strings

--- a/index.template.html
+++ b/index.template.html
@@ -12,6 +12,7 @@
     var forceAutoHeightLayout = '{force-auto-height}';
     var markdownArtifactsServerAddress = '{md-server-address-to-replace}';
     var maxTableTextLength = '{max-table-text-length}';
+    var useServerFormattedDate = '{use-server-formatted-date}';
   </script>
   <body>
     <div id="app"></div>
